# rsync-Phoenix-Rebuilt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  file_sync.py  pyproject.toml  rsync_phoenix_rebuilt.py  setup.py  test_cross_validation.py  test_end_to_end.py  test_multi_protocol.py  test_protocol_parity.py  test_wire_protocol_parity.py  verificar_paridad_opciones.py
.github/skills/deep-audit/: SKILL.md
.github/skills/rsync-python-parity/: SKILL.md
.github/skills/rsync-python-testing/: SKILL.md  run_tests.sh
.github/workflows/: ci.yml
benchmarks/: benchmark_vs_rsync.py  compare_with_c.py
docs/: CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md
tests/: test_cli_local_parity.py  test_compat_handshake.py  test_comprehensive.py  test_cross_validation.py  test_end_to_end.py  test_flist_wire_roundtrip.py  test_multi_protocol.py  test_protocol_parity.py  test_rsync_sender_flist_interop.py  test_wire_protocol_parity.py
