[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rsync-python"
version = "3.0.2"
description = "Pure Python rsync algorithm implementation - Rolling checksum, delta transfer, block matching. No binary dependencies. Production-ready with a comprehensive test suite. Protocols 20-32 supported. Cross-platform. Zig and PHP versions coming soon."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Alejandro Sanchez", email = "alesangreat@gmail.com"}
]
maintainers = [
    {name = "Alejandro Sanchez", email = "alesangreat@gmail.com"}
]
keywords = ["rsync", "sync", "backup", "delta", "algorithm", "compression", "file-transfer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Archiving :: Mirroring",
    "Topic :: Utilities",
]

dependencies = [
    "xxhash>=3.0.0",
    "lz4>=4.0.0",
    "zstandard>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/alesanGreat/rsync-Phoenix-Rebuilt"
Documentation = "https://github.com/alesanGreat/rsync-Phoenix-Rebuilt#readme"
Repository = "https://github.com/alesanGreat/rsync-Phoenix-Rebuilt"
"Bug Tracker" = "https://github.com/alesanGreat/rsync-Phoenix-Rebuilt/issues"
Changelog = "https://github.com/alesanGreat/rsync-Phoenix-Rebuilt/blob/main/CHANGELOG.md"

[project.scripts]
rsync-phoenix = "rsync_phoenix_rebuilt:main"

[tool.setuptools]
py-modules = ["rsync_phoenix_rebuilt"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | rsync-original-source-code
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["rsync_phoenix_rebuilt"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    ".",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["rsync_phoenix_rebuilt"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
